______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.193:

* XINS/Java Common Framework:
  - Fixed bug in GroupDescriptor.hasNext(). Previously it could incorrectly
    return true instead of false.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.192:

* XINS/Java Client Framework:
  - Setting connection time-out as well. Previously, a socket time-out would
    only be set. The connection time-out is assumed to be the same as the
    socket time-out (specified in the ServiceDescriptor class).
  - Added constructor to AbstractCAPI class that accepts a Descriptor
    instance. This is from now on the preferred way of constructing an
    AbstractCAPI instance. The other constructor, which takes a
    XINSServiceCaller argument, is now marked as deprecated.

* XINS/Java Server Framework:
  - Automatically generating a diagnostic context identifier if none is given
    via the _context parameter. The generated identifier always consists of
    exactly 16 hex digits, which represent a random 64-bit number. It is
    currently not possible to change the algorithm and have a different
    identifier generated.
  - Changed the fallback default log pattern, from:
       %-4c{1} %-6p %m%n
    to:
       %16x %6c{1} %-6p %m%n
  - Fixed bug in the CallResultOutputter class: The 'success' attribute on a
    'result' element would always be set to 'false', even on successful
    execution of the function.
    This bug was introduced in XINS 0.191.
  - No longer warning for servlet containers that implement version 2.2 of the
    Java Servlet specification instead of 2.3. Both are supported.

* Generated CAPI classes:
  - Added constructor to the generated CAPI class that accepts a Descriptor
    instance. This is from now on the preferred way of constructing a CAPI
    instance. The other constructor, which takes a XINSServiceCaller argument,